@@ -592,13 +592,10 @@ target_link_libraries(cantata support-core qtiocompressor ${CANTATA_LIBS} ${QTLI
 add_definitions(-DQT_NO_DEBUG_OUTPUT)
 
 if (UNIX AND NOT APPLE)
-    configure_file(cantata-remote.cmake ${CMAKE_BINARY_DIR}/cantata-remote)
     if (NOT HAIKU)
-        configure_file(cantata.desktop.cmake ${CMAKE_BINARY_DIR}/cantata.desktop)
-    endif ()
-    install(PROGRAMS ${CMAKE_BINARY_DIR}/cantata-remote DESTINATION ${SHARE_INSTALL_PREFIX}/${CMAKE_PROJECT_NAME}/scripts)
-    if (NOT HAIKU)
-        install(FILES ${CMAKE_BINARY_DIR}/cantata.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
+        configure_file(cantata-remote.cmake ${CMAKE_BINARY_DIR}/cantata-remote)
+        install(PROGRAMS ${CMAKE_BINARY_DIR}/cantata-remote DESTINATION ${SHARE_INSTALL_PREFIX}/${CMAKE_PROJECT_NAME}/scripts)
+        install(FILES cantata.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
     endif ()
     target_link_libraries(cantata -lpthread)
 endif ()
